--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,7 +19,7 @@
 <ul class="thumbnails">
 	<li class="span10" ng-repeat="serie in searchResult">
 		<div class="thumbnail">
-			<img ng-src="{{'/banners/' + serie.banner}}" ng-show="serie.banner" alt="{{serie.seriesname + ' Banner'}}">
+			<img ng-src="{{serie.banner | tvdbbanner}}" ng-show="serie.banner" alt="{{serie.seriesname + ' Banner'}}">
 			<div class="caption">
 								<i class="pull-left" ng-click="isCollapsed = !isCollapsed" ng-class="{'icon-plus-sign':isCollapsed, 'icon-minus-sign': !isCollapsed}"></i>
 				<h3 class="pull-left">
